2011-04-04  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix, run uninstall when cleaning to remove built files
        from WebKitBuild.

        * Scripts/webkitdirs.pm:

2011-04-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] WebGL support
        https://bugs.webkit.org/show_bug.cgi?id=31517

        Add support to the DRT for turning on WebGL when a layout tests requests it.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::overridePreference): Allow turning on WebGL from tests.

2011-04-04  Chang Shu  <cshu@webkit.org>

        Reviewed by Darin Adler.

        WebKitTestRunner needs layoutTestController.setAllowFileAccessFromFileURLs
        https://bugs.webkit.org/show_bug.cgi?id=57572

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::setAllowFileAccessFromFileURLs):
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:

2011-04-04  Keith Kyzivat  <keith.kyzivat@nokia.com>

        Reviewed by Csaba Osztrogonác.

        [Qt] DumpRenderTree breaks compilation in some uClibc environments
        https://bugs.webkit.org/show_bug.cgi?id=57602

        * DumpRenderTree/qt/main.cpp:
        (get_backtrace):

2011-04-04  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix, add new LayoutTestController method stub to wx.

        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::shadowRoot):

2011-04-04  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, fix exception in rebaseline tool.

        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:

2011-04-02  Beth Dakin  <bdakin@apple.com>

        Rubber-stamped by Geoff Garen.

        For Dan!
        * DumpRenderTree/mac/DumpRenderTree.mm: