@@ -1,3 +1,13 @@
+2011-04-04  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        [chromium] don't write .checksum files if a fallback platform has an embedded checksum
+        https://bugs.webkit.org/show_bug.cgi?id=57783
+
+        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:
+        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests_unittest.py:
+
 2011-04-04  Kevin Ollivier  <kevino@theolliviers.com>
 
         [wx] Unreviewed build fix, run uninstall when cleaning to remove built files
